Fixed the following issues
1. Node import missing a condition
2. Added multiple organization test

Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/molecule/basesystem/create.yml
+++ b/molecule/basesystem/create.yml
@@ -20,7 +20,7 @@
       changed_when: '"not yet present" in result.stdout'
 
     - name: Create Namespace
-      k8s:
+      community.kubernetes.k8s:
         api_version: v1
         kind: Namespace
         name: '{{ namespace }}'
