--- a/roles/agent/common/endplay.yml
+++ b/roles/agent/common/endplay.yml
@@ -21,7 +21,7 @@
       result: "{{ RESULT_MSG }}"
     conditions:
       - type: Running
-        status: "{{ OK | ternary(True, False) }}"
+        status: "True"
         reason: "{{ OK | ternary('Successful', 'Failed') }}"
         lastTransitionTime: "{{ lookup('pipe', 'date --rfc-3339 seconds') }}"
 
