--- a/molecule/default/destroy.yml
+++ b/molecule/default/destroy.yml
@@ -12,7 +12,7 @@
         state: absent
 
     - name: Destroy Namespace
-      k8s:
+      community.kubernetes.k8s:
         api_version: v1
         kind: Namespace
         name: '{{ namespace }}'
