--- a/roles/agent/ops/orgjoin/createjoinrequest.yml
+++ b/roles/agent/ops/orgjoin/createjoinrequest.yml
@@ -8,7 +8,7 @@
     (consoleasset.msp_id|default('')) == '' or
     consoleasset.type != 'msp' or
     (consoleasset.admins|default([])|length) == 0 or
-    (consoleasset.tls_root_certs|default([])|length) == 0
+    (consoleasset.tls_root_certs|default([])|length) == 0 or
     (consoleasset.root_certs|default([])|length) == 0
   include_tasks: '{{ role_path }}/common/endplay.yml'
   vars:
