--- a/molecule/legacykind/create.yml
+++ b/molecule/legacykind/create.yml
@@ -7,4 +7,4 @@
     # - name: Create test kind cluster
     #   command: kind create cluster --name osdk-test --kubeconfig {{ kubeconfig }}
     - name: Use the tools script to setup k8s
-      command: "{{ project_dir }}/tools/nginxk8s.sh --name kind --kubeconfig {{ kubeconfig }}"
+      command: "{{ project_dir }}/tools/nginxk8s.sh --name osdk-test --kubeconfig {{ kubeconfig }}"
