--- a/molecule/legacykind/converge.yml
+++ b/molecule/legacykind/converge.yml
@@ -11,10 +11,8 @@
         chdir: '{{ project_dir }}'
 
     - name: Load image into kind cluster
-      command: kind load docker-image --name kind '{{ operator_image }}'
+      command: kind load docker-image --name osdk-test '{{ operator_image }}'
       register: result
       changed_when: '"not yet present" in result.stdout'
 
-    - import_tasks: ../default/kustomize.yml
-      vars:
-        state: present
+- import_playbook: ../default/converge.yml
