--- a/molecule/legacykind/molecule.yml
+++ b/molecule/legacykind/molecule.yml
@@ -21,7 +21,7 @@ provisioner:
   inventory:
     group_vars:
       all:
-        namespace: ${TEST_OPERATOR_NAMESPACE:-fabric-operator-system}
+        namespace: ${TEST_OPERATOR_NAMESPACE:-osdk-test}
     host_vars:
       localhost:
         ansible_python_interpreter: '{{ ansible_playbook_python }}'
@@ -33,8 +33,8 @@ provisioner:
         kubeconfig: "{{ lookup('env', 'KUBECONFIG') }}"
         kustomize: ${KUSTOMIZE_PATH:-kustomize}
   env:
-    K8S_AUTH_KUBECONFIG: ~/.kube/config
-    KUBECONFIG: ~/.kube/config
+    K8S_AUTH_KUBECONFIG: ${MOLECULE_EPHEMERAL_DIRECTORY}/kubeconfig
+    KUBECONFIG: ${MOLECULE_EPHEMERAL_DIRECTORY}/kubeconfig
 verifier:
   name: ansible
   lint: |
