--- a/molecule/twoorgs/molecule.yml
+++ b/molecule/twoorgs/molecule.yml
@@ -21,7 +21,7 @@ provisioner:
   inventory:
     group_vars:
       all:
-        namespace: ${TEST_OPERATOR_NAMESPACE:-osdk-test}
+        namespace: ${TEST_OPERATOR_NAMESPACE:-fabric-operator-system}
     host_vars:
       localhost:
         ansible_python_interpreter: '{{ ansible_playbook_python }}'
@@ -32,10 +32,9 @@ provisioner:
         operator_pull_policy: "Never"
         kubeconfig: "{{ lookup('env', 'KUBECONFIG') }}"
         kustomize: ${KUSTOMIZE_PATH:-kustomize}
-        fabric_config: ${MOLECULE_PROJECT_DIRECTORY}/molecule/oneorg/.env.yml
   env:
-    K8S_AUTH_KUBECONFIG: ${MOLECULE_EPHEMERAL_DIRECTORY}/kubeconfig
-    KUBECONFIG: ${MOLECULE_EPHEMERAL_DIRECTORY}/kubeconfig
+    K8S_AUTH_KUBECONFIG: ~/.kube/config
+    KUBECONFIG: ~/.kube/config
 verifier:
   name: ansible
   lint: |
