--- a/molecule/oneorg/cleanup.yml
+++ b/molecule/oneorg/cleanup.yml
@@ -31,6 +31,6 @@
     community.kubernetes.k8s:
       api_version: v1
       kind: Namespace
-      name: '{{ testnamespace }}'
+      name: '{{ namespace }}'
       kubeconfig: '{{ kubeconfig }}'
       state: absent
