--- a/roles/agent/ops/channeljoin/apply.yml
+++ b/roles/agent/ops/channeljoin/apply.yml
@@ -61,11 +61,11 @@
   ansible.builtin.shell: |
     export FABRIC_CFG_PATH={{ agentworkdir }}/config
     export CORE_PEER_TLS_ENABLED=true
-    export CORE_PEER_LOCALMSPID={{ ordererid.mspid }}
-    export CORE_PEER_TLS_ROOTCERT_FILE={{ agentworkdir }}/{{ ordererNode }}/tls/ca.crt
-    export CORE_PEER_MSPCONFIGPATH={{ agentworkdir }}/{{ ordererNode }}/msp
-    export CORE_PEER_ADDRESS={{ ordererid.endpoint }}
-    {{ bindir }}/bin/peer channel fetch config config_block.bk \
+    export CORE_PEER_LOCALMSPID={{ peerid.mspid }}
+    export CORE_PEER_TLS_ROOTCERT_FILE={{ agentworkdir }}/{{ peerNode }}/tls/ca.crt
+    export CORE_PEER_MSPCONFIGPATH={{ agentworkdir }}/{{ peerNode }}/msp
+    export CORE_PEER_ADDRESS={{ peerid.endpoint }}
+    {{ bindir }}/bin/peer channel fetch oldest config_block.bk \
     --tls -c {{ channelName }} -o {{ ordererid.endpoint }} \
     --cafile {{ agentworkdir }}/{{ ordererNode }}/tls/ca.crt
   args:
