Added legacy channel support
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/config/samples/operator_v1alpha1_lorderer.yaml
+++ b/config/samples/operator_v1alpha1_lorderer.yaml
@@ -1,7 +1,7 @@
 apiVersion: operator.fabric.hyperledger.org/v1alpha1
 kind: Orderer
 metadata:
-  name: orderer15-sample
+  name: orderer-sample
 spec:
   # Add fields here
   organization: example.com
@@ -9,4 +9,4 @@ spec:
   release: 2.3.2
   storage: 1Gi
   logLevel: DEBUG
-  genesisfile: ''
+  genesisfile: oldsystem
