--- a/roles/orderer/tasks/main.yml
+++ b/roles/orderer/tasks/main.yml
@@ -9,6 +9,7 @@
   set_fact:
     workdir: "{{ lookup('env','HOME') }}/vars"
     nodename: "{{ ansible_operator_meta.name }}.{{ organization }}"
+    legacy: "{{ genesisfile is defined and genesisfile != '' and genesisfile != None }}"
 
 - name: setup canonical name and node cert name for the node
   set_fact:
@@ -100,144 +101,13 @@
   set_fact:
     iporhost: "{{ (NODE_HOSTNAME=='')|ternary(NODE_IP, NODE_HOSTNAME) }}"
 
-- name: start orderer node
-  community.kubernetes.k8s:
-    definition:
-      kind: StatefulSet
-      apiVersion: apps/v1
-      metadata:
-        name: '{{ ansible_operator_meta.name }}'
-        namespace: '{{ ansible_operator_meta.namespace }}'
-      spec:
-        selector:
-          matchLabels:
-            k8s-app: '{{ cnodename }}'
-            hlf-type: orderer
-            hlf-dn: '{{ organization }}'
-            hlf-mspid: '{{ cnodename }}'
-        serviceName: '{{ ansible_operator_meta.name }}'
-        replicas: 1
-        volumeClaimTemplates:
-        - metadata:
-            name: '{{ cnodename }}-data'
-          spec:
-            accessModes:
-            - ReadWriteOnce
-            resources:
-              requests:
-                storage: "{{ storage }}"
-        template:
-          metadata:
-            labels:
-              k8s-app: '{{ cnodename }}'
-              hlf-type: orderer
-              hlf-dn: '{{ organization }}'
-              hlf-mspid: '{{ cnodename }}'
-          spec:
-            volumes:
-            - name: nodecert
-              projected:
-                sources:
-                - secret:
-                    name: "{{ nodecertsecretname }}"
-                    items:
-                    - key: ca.crt
-                      path: "cacerts/ca.pem"
-                    - key: server.key
-                      path: "keystore/priv_sk"
-                    - key: server.crt
-                      path: "signcerts/signcert.pem"
-                    - key: config.yaml
-                      path: "config.yaml"
-            - name: nodetlscert
-              projected:
-                sources:
-                - secret:
-                    name: "{{ nodecertsecretname }}"
-                    items:
-                    - key: tlsca.crt
-                      path: "ca.crt"
-                    - key: tls.key
-                      path: "server.key"
-                    - key: tls.crt
-                      path: "server.crt"
-            containers:
-            - name: grpcproxy
-              image: ghcr.io/hyperledger-labs/grpc-web:latest
-              env:
-              - { name: "LICENSE", value: "accept" }
-              - { name: "BACKEND_ADDRESS", value: "{{ iporhost }}:{{ EXT_PORTS[0] }}" }
-              - { name: "SERVER_TLS_CERT_FILE", value: "/certs/tls/server.crt" }
-              - { name: "SERVER_TLS_KEY_FILE", value: "/certs/tls/server.key" }
-              - { name: "BACKEND_TLS_CA_FILES", value: "/certs/tls/ca.crt" }
-              - { name: "SERVER_BIND_ADDRESS", value: "0.0.0.0" }
-              - { name: "SERVER_HTTP_DEBUG_PORT", value: "8081" }
-              - { name: "SERVER_HTTP_TLS_PORT", value: "8445" }
-              - { name: "BACKEND_TLS", value: "true" }
-              - { name: "SERVER_HTTP_MAX_WRITE_TIMEOUT", value: "5m" }
-              - { name: "SERVER_HTTP_MAX_READ_TIMEOUT", value: "5m" }
-              - { name: "USE_WEBSOCKETS", value: "true" }
-              volumeMounts:
-              - { mountPath: "/certs/tls", name: "nodetlscert" }
-            - name: fabric-orderer
-              image: 'hyperledger/fabric-orderer:{{ release }}'
-              imagePullPolicy: IfNotPresent
-              livenessProbe:
-                httpGet:
-                  path: /healthz
-                  port: 7060
-                failureThreshold: 1
-                periodSeconds: 10
-              readinessProbe:
-                initialDelaySeconds: 5
-                periodSeconds: 4
-                timeoutSeconds: 1
-                successThreshold: 1
-                failureThreshold: 1
-                httpGet:
-                  host:
-                  scheme: HTTP
-                  path: /healthz
-                  port: 7060
-              env:
-              - { name: "FABRIC_LOGGING_SPEC", value: "{{ log_level }}" }
-              - { name: "ORDERER_GENERAL_LISTENADDRESS", value: "0.0.0.0" }
-              - { name: "ORDERER_GENERAL_LISTENPORT", value: "7050" }
-              - { name: "ORDERER_GENERAL_LOCALMSPID", value: "{{ mspid }}" }
-              - { name: "ORDERER_GENERAL_LOCALMSPDIR", value: "/var/hyperledger/orderer/msp" }
-              - { name: "ORDERER_GENERAL_BOOTSTRAPMETHOD", value: "none" }
-              - { name: "ORDERER_GENERAL_TLS_ENABLED", value: "true" }
-              - { name: "ORDERER_GENERAL_TLS_PRIVATEKEY",
-                  value: "/var/hyperledger/orderer/tls/server.key" }
-              - { name: "ORDERER_GENERAL_TLS_CERTIFICATE",
-                  value: "/var/hyperledger/orderer/tls/server.crt" }
-              - { name: "ORDERER_GENERAL_TLS_ROOTCAS",
-                  value: "[/var/hyperledger/orderer/tls/ca.crt]" }
-              - { name: "ORDERER_GENERAL_TLS_SERVERHOSTOVERRIDE", value: "{{ nodename }}" }
-              - { name: "ORDERER_GENERAL_CLUSTER_CLIENTCERTIFICATE",
-                  value: "/var/hyperledger/orderer/tls/server.crt" }
-              - { name: "ORDERER_GENERAL_CLUSTER_CLIENTPRIVATEKEY",
-                  value: "/var/hyperledger/orderer/tls/server.key" }
-              - { name: "ORDERER_GENERAL_CLUSTER_ROOTCAS",
-                  value: "[/var/hyperledger/orderer/tls/ca.crt]" }
-              - { name: "ORDERER_ADMIN_LISTENADDRESS", value: "0.0.0.0:7080" }
-              - { name: "ORDERER_ADMIN_TLS_ENABLED", value: "true" }
-              - { name: "ORDERER_ADMIN_TLS_CLIENTAUTHREQUIRED", value: "true" }
-              - { name: "ORDERER_ADMIN_TLS_PRIVATEKEY",
-                  value: "/var/hyperledger/orderer/tls/server.key" }
-              - { name: "ORDERER_ADMIN_TLS_CERTIFICATE",
-                  value: "/var/hyperledger/orderer/tls/server.crt" }
-              - { name: "ORDERER_ADMIN_TLS_CLIENTROOTCAS",
-                  value: "[/var/hyperledger/orderer/tls/ca.crt]" }
-              - { name: "ORDERER_CHANNELPARTICIPATION_ENABLED", value: "true" }
-              - { name: "ORDERER_GENERAL_FILELEDGER_LOCATION", value: "/var/hyperledger/production" }
-              - { name: "ORDERER_OPERATIONS_LISTENADDRESS", value: "0.0.0.0:7060" }
-              - { name: "ORDERER_OPERATIONS_TLS_ENABLED", value: "false" }
-              volumeMounts:
-              - { mountPath: "/var/hyperledger/orderer/msp", name: "nodecert" }
-              - { mountPath: "/var/hyperledger/orderer/tls", name: "nodetlscert" }
-              - { mountPath: "/var/hyperledger/production", name: "{{ cnodename }}-data" }
-              command: ['orderer']
+- name: Boot up nonsystem orderer node
+  when: legacy != True
+  include_tasks: 'nonsystem.yml'
+
+- name: Boot up legacy orderer node
+  when: legacy == True
+  include_tasks: 'system.yml'
 
 - name: Update the crd status
   operator_sdk.util.k8s_status:
