Improved the configtx.yaml file
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/molecule/kind/create.yml
+++ b/molecule/kind/create.yml
@@ -5,4 +5,4 @@
   gather_facts: false
   tasks:
     - name: Use the tools script to setup k8s
-      command: "{{ project_dir }}/tools/nginxk8s.sh --name kind --kubeconfig {{ kubeconfig }}"
+      command: "{{ project_dir }}/tools/nginxk8s.sh"
