--- a/config/testing/kustomization.yaml
+++ b/config/testing/kustomization.yaml
@@ -1,5 +1,5 @@
 # Adds namespace to all resources.
-namespace: fabric-operator-system
+namespace: osdk-test
 
 namePrefix: osdk-
 
@@ -12,6 +12,7 @@ patchesStrategicMerge:
 - debug_logs_patch.yaml
 - ../default/manager_auth_proxy_patch.yaml
 - pull_policy/Always.yaml
+- pull_policy/Never.yaml
 
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
