Fixed the molecule env issue
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/molecule/aws/create.yml
+++ b/molecule/aws/create.yml
@@ -4,3 +4,7 @@
   connection: local
   gather_facts: false
   tasks: []
+    - name: Set pull policy
+      command: '{{ kustomize }} edit add patch pull_policy/{{ operator_pull_policy }}.yaml'
+      args:
+        chdir: '{{ config_dir }}/testing'
