--- a/molecule/aws/destroy.yml
+++ b/molecule/aws/destroy.yml
@@ -6,3 +6,7 @@
   collections:
     - community.kubernetes
   tasks: []
+    - name: Unset pull policy
+      command: '{{ kustomize }} edit remove patch pull_policy/{{ operator_pull_policy }}.yaml'
+      args:
+        chdir: '{{ config_dir }}/testing'
