--- a/molecule/aws/molecule.yml
+++ b/molecule/aws/molecule.yml
@@ -33,8 +33,8 @@ provisioner:
         kubeconfig: "{{ lookup('env', 'KUBECONFIG') }}"
         kustomize: ${KUSTOMIZE_PATH:-kustomize}
   env:
-    K8S_AUTH_KUBECONFIG: ~/.kube/config
-    KUBECONFIG: ~/.kube/config
+    K8S_AUTH_KUBECONFIG: ${HOME}/.kube/config
+    KUBECONFIG: ${HOME}/.kube/config
 verifier:
   name: ansible
   lint: |
