--- a/molecule/kind/create.yml
+++ b/molecule/kind/create.yml
@@ -5,4 +5,9 @@
   gather_facts: false
   tasks:
     - name: Use the tools script to setup k8s
-      command: "{{ project_dir }}/tools/nginxk8s.sh --name kind --kubeconfig {{ kubeconfig }}"
+      command: "{{ project_dir }}/tools/nginxk8s.sh"
+
+    - name: Set pull policy
+      command: '{{ kustomize }} edit add patch pull_policy/{{ operator_pull_policy }}.yaml'
+      args:
+        chdir: '{{ config_dir }}/testing'
